# cuda2np

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
csrc/include/: common.cuh
csrc/trt/: clip.cu
python/cuda2np/: __init__.py
python/cuda2np/trt/: __init__.py  clip.py
test/: test_trt_clip.py
